# solpl

./: LIBS.md  LICENSE  README.md  pyproject.toml
async/: Loop.sol  Pool.sol  Promise.sol
example/: all.sol
examples/: 10_Imports.sol  11_Guard.sol  12_Strings.sol  13_Boolean.sol  14_ExtData.sol  15_When.sol  16_Optionals.sol  17_Result.sol  18_Call.sol  19_Fetch.sol  1_Variables.sol  20_Listen.sol  21_RaySync.sol  22_Group.sol  2_IO.sol  3_Arithmetic.sol  4_Functions.sol  5_Logic.sol  6_Loops.sol  7_Lists.sol  8_Structs.sol  9_Async.sol
interpreter/: sol.py
projects/: Calculator.sol  IDEAS.md  Login.sol  Notes.sol  School.sol  SolShop.sol  SunnyNotes.sol  USE.md
projects/scripts/: rocket.sol  solbank.sol
solplans/: newio.sol  newvardecl.sol
std/async/: AsyncUseSol.sol  Dispatch.sol
std/bool/: Boolean.sol
std/calc/: Math.sol
std/extcond/: Cond.sol
std/extdata/: BinaryTree.sol  HashMap.sol  Infinity.sol  LinkedList.sol  Maybe.sol  Primitive.sol  Queue.sol  Stack.sol
std/list/: Lists.sol
std/str/: String.sol
time/: Time.sol
